	be called on quit, so don't deadlock in status change.
	* src/icon.c: make tray_icon_set do a tooltip too.
	* libgsm/gsm.cc: disconnect on errors properly.
	* libgsm/phonemgr-listener.cc: set disconnected flag on error.
	* src/menu.c: add Send Message menu item.
	* ui/phonemgr.glade: a bit of HIGgification.
	* src/ui.c: implement sending dialog.

2004-06-17  Edd Dumbill <edd@usefulinc.com>

	* Checking into GNOME CVS.  Starting port to the new Bonobo-less
	gnome-bluetooth framework.
	* Move gsm stuff to libgsm/. Start work on GObject wrapper for it.
	* libgsm/.cvsignore, .cvsignore: add cvsignores.
	* libgsm/phonemgr-listener.cc: keep track of whether connected, and
	complain if methods requiring connection are called when disconnected.
	* libegg/: import libegg bits we'll need.
	* autogen.sh: call libegg autogen.sh.
	* configure.in: chain libegg configure.
	* src/Makefile.am, src/main.c: stubs for main program.
	* ui/GNOME_PhonemanagerApplet.xml: remove.
	* src/gnome-phone-manager.desktop.in: add desktop file.

2003-07-06  Edd Dumbill  <edd@usefulinc.com>

	* Release 0.2.1.
	* giveusaclue.c,h dashboard-frontend.c: now supports sending
	cluepackets to Nat Friedman's Dashboard <http://nat.org/dashboard>.

2003-04-03  Edd Dumbill  <edd@usefulinc.com>

	* Now goes for the dialup networking connection rather than
	  the serial port on Bluetooth -- increased compatibility, I
	  hope.  Means it should work for Nokia 7650 owners.

2003-03-05  Edd Dumbill  <edd@usefulinc.com>

	* Added French translation from Gaël Chamoulaud

2003-03-01  Edd Dumbill  <edd@usefulinc.com>

	* Release 0.2.0.
	* src/gsm.cc: make date formatting use Glib as much as possible
	* pursue further Glib::ustring conversions

2003-02-19  Edd Dumbill  <edd@usefulinc.com>

	* Converted std::strings to Glib::ustrings throughout.

	* Implemented sending functionality.  Reply button now works
	in message dialog.  "Send message..." menu item on applet.

2003-02-07  Edd Dumbill  <edd@usefulinc.com>
