@@ -4,21 +4,13 @@ SUBDIRS = po libgsm libegg src
 
 EXTRA_DIST = \
 	autogen.sh \
-    intltool-extract.in intltool-merge.in intltool-update.in
+	intltool-extract.in intltool-merge.in intltool-update.in
 
 install-data-local:
 	@$(NORMAL_INSTALL)
-	if test -d $(srcdir)/ui/pixmaps; then \
-	  $(mkinstalldirs) $(DESTDIR)$(datadir)/$(PACKAGE)/pixmaps; \
-	  for pixmap in $(srcdir)/ui/pixmaps/*.png; do \
-	    if test -f $$pixmap; then \
-	      $(INSTALL_DATA) $$pixmap $(DESTDIR)$(datadir)/$(PACKAGE)/pixmaps; \
-	    fi \
-	  done \
-	fi
 	if test -d $(srcdir)/ui; then \
 	  $(mkinstalldirs) $(DESTDIR)$(datadir)/$(PACKAGE); \
-	  for uifile in $(srcdir)/ui/*.glade $(srcdir)/ui/*.xml; do \
+	  for uifile in $(srcdir)/ui/*.glade $(srcdir)/ui/*.png; do \
 	    if test -f $$uifile; then \
 	      $(INSTALL_DATA) $$uifile $(DESTDIR)$(datadir)/$(PACKAGE)/; \
 	    fi \
@@ -28,19 +20,10 @@ install-data-local:
 dist-hook:
 	if test -d ui; then \
 	  mkdir $(distdir)/ui; \
-	  for uifile in ui/*.glade ui/*.xml; do \
+	  for uifile in ui/*.glade ui/*.png; do \
 	    if test -f $$uifile; then \
-	      cp -p $$uifile $(distdir)/ui; \
+	      cp -p $$uifile $(distdir)/ui/; \
 	    fi \
 	  done \
 	fi
-	if test -d ui/pixmaps; then \
-	  mkdir $(distdir)/ui/pixmaps; \
-	  for uifile in ui/pixmaps/*.png ui/pixmaps/*.xcf; do \
-	    if test -f $$uifile; then \
-	      cp -p $$uifile $(distdir)/ui/pixmaps; \
-	    fi \
-	  done \
-	fi
-
 
