@@ -1,8 +1,8 @@
 [Desktop Entry]
 Encoding=UTF-8
-_Name=Mobile Phone Manager
+_Name=Phone Manager
 _Comment=Receive and send text messages from your mobile phone
-Icon=../gnome-phone-manager/ui/pixmaps/cellphone.png
+Icon=../gnome-phone-manager/cellphone.png
 Exec=gnome-phone-manager
 Terminal=0
 Type=Application
